implement the mapper Form type for HVDC LCC (#228)
Signed-off-by: Rehili Ghazwa <ghazwarhili@gmail.com>